--- a/src/static/templates/ecommerce/layouts/ecommerce.layout.html
+++ b/src/static/templates/ecommerce/layouts/ecommerce.layout.html
@@ -83,12 +83,15 @@
             <div class="footer-contact-info">
                 <ul>
                     <h6 class="footer-link-list__title">CONTÁCTANOS</h6>
-                    <div class="footer-contact-info__item"><span><img src="{% static 'img/ic-44.png' %}"
-                                alt="">Lorem Ipsum #12 Col. Ipsum</span></div>
-                    <div class="footer-contact-info__item"><span><img src="{% static 'img/ic-43.png' %}"
-                                alt="">(662) 187 5495</span></div>
-                    <div class="footer-contact-info__item"><span><img src="{% static 'img/ic-45.png' %}"
-                                alt="">contacto@caterra.com.mx</span></div>
+                    <div class="footer-contact-info__item">
+                        <img src="{% static 'img/ic-44.png' %}" alt="">
+                        <span>Lorem Ipsum #12 Col. Ipsum</span></div>
+                    <div class="footer-contact-info__item">
+                        <img src="{% static 'img/ic-43.png' %}" alt="">
+                        <span>(662) 187 5495</span></div>
+                    <div class="footer-contact-info__item">
+                        <img src="{% static 'img/ic-45.png' %}" alt="">
+                        <span>contacto@caterra.com.mx</span></div>
                 </ul>
             </div>
             <div class="footer-menu">
