--- a/src/static/templates/ecommerce/home.html
+++ b/src/static/templates/ecommerce/home.html
@@ -121,19 +121,19 @@
 <!-- end map -->
 
 <!-- formulario index -->
-<div id="" align="center" style="margin-bottom: 6%;">
-    <div class="" style="
+<div align="center" style="
         background-color: #e9e9e9;
         margin-left: 5%;
         margin-right: 5%;
+        margin-bottom: 6%;
         padding-top: 3%;
         padding-bottom: 3%;
         border-top: 4px solid #000000;
         position: relative;
         ">
-        <form class="contact-section-form" action="{% url 'ecommerce:contact' %}" method="POST">
-            {% csrf_token %}
-            <!-- <div class="row">
+    <form class="contact-section-form" action="{% url 'ecommerce:contact' %}" method="POST">
+        {% csrf_token %}
+        <!-- <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="name">Nombre:</label>
@@ -164,114 +164,116 @@
                     padding-right: 2%;
                     ">Enviar</button>
             </div> -->
-            <div class="row" style="text-align: center; text-align-last: center;">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="tipo_propiedad" class="label">TIPO DE PROPIEDAD</label>
-                        <select class="form-control">
-                            <option value="">Tipo de Propiedad</option>
-                            <option value="">Opcion 1</option>
-                            <option value="">Opcion 2</option>
-                            <option value="">Opcion 3</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="ciudad" class="label">CIUDAD</label>
-                        <select class="form-control">
-                            <option value="">Ciudad</option>
-                            <option value="">Opcion 1</option>
-                            <option value="">Opcion 2</option>
-                            <option value="">Opcion 3</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="habitaciones" class="label">HABITACIONES</label>
-                        <select class="form-control">
-                            <option value="">Habitaciones</option>
-                            <option value="">Opcion 1</option>
-                            <option value="">Opcion 2</option>
-                            <option value="">Opcion 3</option>
-                        </select>
-                    </div>
+        <div class="row" style="text-align: center; text-align-last: center;">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="tipo_propiedad" class="label">TIPO DE PROPIEDAD</label>
+                    <select class="form-control">
+                        <option value="">Tipo de Propiedad</option>
+                        <option value="">Opcion 1</option>
+                        <option value="">Opcion 2</option>
+                        <option value="">Opcion 3</option>
+                    </select>
                 </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="tipo_oferta" class="label">TIPO DE OFERTA</label>
-                        <select class="form-control">
-                            <option value="">Tipo de Oferta</option>
-                            <option value="">Opcion 1</option>
-                            <option value="">Opcion 2</option>
-                            <option value="">Opcion 3</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="estado" class="label">ESTADO</label>
-                        <select class="form-control">
-                            <option value="">Estado</option>
-                            <option value="">Opcion 1</option>
-                            <option value="">Opcion 2</option>
-                            <option value="">Opcion 3</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="tamano" class="label">TAMAÑO</label>
-                        <select class="form-control">
-                            <option value="">Tamaño</option>
-                            <option value="">Opcion 1</option>
-                            <option value="">Opcion 2</option>
-                            <option value="">Opcion 3</option>
-                        </select>
-                    </div>
+                <div class="form-group">
+                    <label for="ciudad" class="label">CIUDAD</label>
+                    <select class="form-control">
+                        <option value="">Ciudad</option>
+                        <option value="">Opcion 1</option>
+                        <option value="">Opcion 2</option>
+                        <option value="">Opcion 3</option>
+                    </select>
                 </div>
-                <div class="col-md-4">
-                    <div class="row form-group">
-                        <div class="col-md-12" style="text-align: center;">
-                            <label for="precio" class="label">PRECIO</label>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <input type="number" placeholder="Desde" class="form-control" name="precio-desde"
-                                    id="precio-desde">
-                            </div>
-                            <div class="col-md-6">
-                                <input type="number" placeholder="Hasta" class="form-control" name="precio-hasta"
-                                    id="precio-hasta">
-                            </div>
-                        </div>
+                <div class="form-group">
+                    <label for="habitaciones" class="label">HABITACIONES</label>
+                    <select class="form-control">
+                        <option value="">Habitaciones</option>
+                        <option value="">Opcion 1</option>
+                        <option value="">Opcion 2</option>
+                        <option value="">Opcion 3</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="tipo_oferta" class="label">TIPO DE OFERTA</label>
+                    <select class="form-control">
+                        <option value="">Tipo de Oferta</option>
+                        <option value="">Opcion 1</option>
+                        <option value="">Opcion 2</option>
+                        <option value="">Opcion 3</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="estado" class="label">ESTADO</label>
+                    <select class="form-control">
+                        <option value="">Estado</option>
+                        <option value="">Opcion 1</option>
+                        <option value="">Opcion 2</option>
+                        <option value="">Opcion 3</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="tamano" class="label">TAMAÑO</label>
+                    <select class="form-control">
+                        <option value="">Tamaño</option>
+                        <option value="">Opcion 1</option>
+                        <option value="">Opcion 2</option>
+                        <option value="">Opcion 3</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="row form-group">
+                    <div class="col-md-12" style="text-align: center;">
+                        <label for="precio" class="label">PRECIO</label>
                     </div>
-                    <div class="form-group">
-                        <label for="numero_banos" class="label">BAÑOS</label>
-                        <select class="form-control">
-                            <option value="">Número de Baños</option>
-                            <option value="">Opcion 1</option>
-                            <option value="">Opcion 2</option>
-                            <option value="">Opcion 3</option>
-                        </select>
-                    </div>
-                    <br>
                     <div class="row">
-                        <div class="col-md-6 prop_form">
-                            <button type="reset" class="btn btn-block clear-button">LIMPIAR</button>
+                        <div class="col-md-6">
+                            <input type="number" placeholder="Desde" class="form-control" name="precio-desde"
+                                id="precio-desde">
                         </div>
-                        <div class="col-md-6 prop_form">
-                            <button type="submit" class="btn btn-block" style="
+                        <div class="col-md-6">
+                            <input type="number" placeholder="Hasta" class="form-control" name="precio-hasta"
+                                id="precio-hasta">
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="numero_banos" class="label">BAÑOS</label>
+                    <select class="form-control">
+                        <option value="">Número de Baños</option>
+                        <option value="">Opcion 1</option>
+                        <option value="">Opcion 2</option>
+                        <option value="">Opcion 3</option>
+                    </select>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-6 prop_form">
+                        <button type="reset" class="btn btn-block clear-button">LIMPIAR</button>
+                    </div>
+                    <div class="col-md-6 prop_form">
+                        <button type="submit" class="btn btn-block" style="
                             background-color: #486600;
                             border-radius: 36px;
                             padding-left: 2%;
                             padding-right: 2%;
                             ">BUSCAR</button>
-                        </div>
                     </div>
                 </div>
             </div>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
 <!-- end formulario index -->
 
 <!-- logo-texto -->
-<div class="container" align="center" style="padding: 0 5% 0 5%;">
-    <div class="row">
+<div class="row">
+    <div align="center" style="
+    margin-left: 5%;
+    margin-right: 5%;
+    ">
         <div class="col-md-4" style="float:left;">
             <img src="{% static 'img/logo-negro.png' %}" width="80%" style="margin-bottom: 1.5em;">
         </div>
@@ -283,6 +285,10 @@
                 nisl nibh, convallis id facilisis vel, placerat ac urna.
                 Nulla eu leo lectus. Praesent consequat augue purus, ac congue justo fringilla ut. Sed sed velit diam.
                 Donec nisi metus, placerat nec dolor accumsan, rutrum fermentum lacus.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.Proin egestas facilisis efficitur. Suspendisse
+                nisl nibh, convallis id facilisis vel, placerat ac urna.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.Proin egestas facilisis efficitur. Suspendisse
+                nisl nibh, convallis id facilisis vel, placerat ac urna.
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.Proin egestas facilisis efficitur. Suspendisse
                 nisl nibh, convallis id facilisis vel, placerat ac urna.
             </p>
@@ -300,75 +306,81 @@
 </div>
 <!-- end logo-texto -->
 
+
 <!-- Propiedades -->
-<!-- <<<<<<< HEAD  -->
-<div class="container prop-cont" style="padding: 0% 3% 0% 3%;">
-    <div class="container">
+<div class="row">
+    <div align="center" style="
+    margin-left: 5%;
+    margin-right: 5%;
+    margin: 6% 6%;
+    ">
         <h1 class="h1_title">PROPIEDADES</h1>
-        <div class="row">
-            {% for propiedad in propiedades %}
-            <div class="col-md-4 col-prop" style="padding:0px !important;">
-                <div class="col-md-12" style="padding-right:1%; padding-left:1%;">
-                    <img class="img-responsive" src="{{propiedad.imagen.image.url}}">
-                    <div class="col-md-12 prop-style" style="background-color: #f1f1f1; padding: 1em 1em;">
-                        <h1 style="font-size: 20pt;">{{propiedad.nombre}}</h1>
-                        <p style="text-align: justify;">{{propiedad.direccion}}</p>
-                        <p style="color: #486600">${{propiedad.precio}}</p>
-                        <p><i class="fas fa-bed"></i>&nbsp;3&nbsp;&nbsp;&nbsp;<i
-                                class="fas fa-bath"></i>&nbsp;{{propiedad.banos}}&nbsp;&nbsp;&nbsp;<i
-                                class="fas fa-th-large"></i> {{propiedad.construccion}} m2
-                        </p>
-                        <div class="row prop-bottom" style="padding-top:1em;">
-                            <div class="col" style="font-size: 10px; padding-top: 2%;">
-                                <!-- <p>Hace 3 Meses</p> -->
-                                <!-- <p>{{propiedad.created_at|timesince}}</p> -->
-                                <p>Hace 3 meses</p>
-                            </div>
-                            <div class="col" style="padding-top: 2%;">
-                                <p style="font-size: 10px;"><i class="far fa-clone"></i> COMPARAR</p>
-                            </div>
-                            <div class="col">
-                                <button onClick="location.href='{% url  'ecommerce:property_detail' propiedad.id %}'"
-                                    class="prop-button">DETALLES &#129122;</button>
-                            </div>
+        {% for propiedad in propiedades %}
+        <div class="col-md-4 col-prop" style="padding:0px !important; float: left;">
+            <div class="col-md-12" style="padding-right:1%; padding-left:1%;">
+                <img class="img-responsive" src="{{propiedad.imagen.image.url}}">
+                <div class="col-md-12 prop-style" style="background-color: #f1f1f1; padding: 1em 1em; text-align: justify;">
+                    <h1 style=" font-size: 20pt;">{{propiedad.nombre}}</h1>
+                    <p>{{propiedad.direccion}}</p>
+                    <p style="color: #486600;">${{propiedad.precio}}</p>
+                    <p><i class="fas fa-bed"></i>&nbsp;3&nbsp;&nbsp;&nbsp;<i
+                            class="fas fa-bath"></i>&nbsp;{{propiedad.banos}}&nbsp;&nbsp;&nbsp;<i
+                            class="fas fa-th-large"></i> {{propiedad.construccion}} m2
+                    </p>
+                    <div class="row prop-bottom" style="padding-top:1em;">
+                        <div class="col" style="font-size: 10px; padding-top: 2%;">
+                            <!-- <p>Hace 3 Meses</p> -->
+                            <!-- <p>{{propiedad.created_at|timesince}}</p> -->
+                            <p>Hace 3 meses</p>
+                        </div>
+                        <div class="col" style="padding-top: 2%;">
+                            <p style="font-size: 10px;"><i class="far fa-clone"></i> COMPARAR</p>
+                        </div>
+                        <div class="col">
+                            <button onClick="location.href='{% url  'ecommerce:property_detail' propiedad.id %}'"
+                                class="prop-button">DETALLES &#129122;</button>
                         </div>
                     </div>
                 </div>
             </div>
-            {% endfor %}
         </div>
+        {% endfor %}
     </div>
 </div>
+<!-- <div class="container prop-cont" style="padding: 0% 3% 0% 3%;">
+    
+</div> -->
 <!-- end Propiedades -->
 
 <!-- Agentes -->
-<div class="container"
-    style="background: url('static/ecommerce/img/patron-agentes.png'); background-size: cover; padding: 1% 3% 1% 3%; margin:0px;">
-    <div class="container">
+<!-- padding: 1% 3% 1% 3%; margin:0px; -->
+<div class="row" style="background: url('static/ecommerce/img/patron-agentes.png'); background-size: cover;">
+    <div align="center" style="
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 6%;
+    ">
         <h1 class="h1_title">CONOCE A NUESTROS AGENTES</h1>
-        <div class="row">
-            {% for agente in agentes %}
-            <div class="col-md-4 col-agnt" style="padding:0px !important;">
-                <div class="col-md-12" style="padding-right:1%; padding-left:1%;">
-                    <img src="{{agente.foto.url}}">
-                    <div class="col-md-12" style="background-color: white;">
-                        <br>
-                        <h1 class="agente-nombre">{{agente.user|title}}</h1>
-                        <br>
-                        <p style="text-align: justify;">{{agente.texto|truncatechars:210}}</p>
-                        <br>
-                        <p><span style="color: #486600"><i class="far fa-envelope"></i></span>
-                            {{agente.user.email}}</p>
-                        <div class="col-md-5 agnt-col" style="margin-left: auto; margin-right: 0; padding: 5%;">
-                            <button onClick="location.href='{% url 'ecommerce:agent_profile' agente.id %}'"
-                                class="prop-button agnt-button">VER PERFIL</button>
-                        </div>
+        {% for agente in agentes %}
+        <div class="col-md-4 col-agnt" style="padding:0px !important; float: left;">
+            <div class="col-md-12">
+                <img src="{{agente.foto.url}}">
+                <div class="col-md-12" style="background-color: white; text-align: justify;">
+                    <br>
+                    <h1 class="agente-nombre">{{agente.user|title}}</h1>
+                    <br>
+                    <p>{{agente.texto|truncatechars:210}}</p>
+                    <br>
+                    <p><span style="color: #486600"><i class="far fa-envelope"></i></span>
+                        {{agente.user.email}}</p>
+                    <div class="col-md-5 agnt-col" style="margin-left: auto; margin-right: 0; padding: 5%;">
+                        <button onClick="location.href='{% url 'ecommerce:agent_profile' agente.id %}'"
+                            class="prop-button agnt-button">VER PERFIL</button>
                     </div>
                 </div>
             </div>
-            {% endfor %}
-
         </div>
+        {% endfor %}
 
         <div align="center" style="margin-top: 1%;">
             <button onClick="location.href='{% url 'ecommerce:agents' %}'" class="btn-agente">
@@ -379,7 +391,6 @@
                 <br>
                 <span><strong>¡AQUÍ!</strong></span></a> -->
         </div>
-
     </div>
 </div>
 <!-- end Agentes -->
