--- a/src/static/templates/ecommerce/includes/nav.html
+++ b/src/static/templates/ecommerce/includes/nav.html
@@ -1,6 +1,35 @@
 {% load static %}
 
-<div class="cat_main_nav" id="cat_main_nav">
+{% block estilos-adicionales %}
+<link href="{% static 'css/header.css' %}" rel="stylesheet">
+{% endblock estilos-adicionales %}
+
+<header class="header" id="header_c">
+        <div class="col logodiv" style="width:40%;">
+                <a href="/" class="logo"><img src="{% static 'img/logo-blanco.png' %}" class="" alt="CaterraLogo"></a>
+        </div>
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu" style="width:60%;">
+                <li><a class="{% if request.path == '/' %}active{% endif %}"
+                                href="{% url 'ecommerce:home' %}">Inicio</a></li>
+                <li><a class="{% if request.path|slice:'10' == '/acerca-de' %}active {% endif %}"
+                                href="{% url 'ecommerce:about' %}">Nosotros</a></li>
+                <li><a
+                                class="{% if request.path|slice:'12' == '/propiedades' %}active {% endif %}"
+                                href="{% url 'ecommerce:properties' %}">Propiedades</a></li>
+                <!-- <li><a class="{% if request.path|slice:"10" == "/productos" %}active {% endif %}"
+                                href="{% url "ecommerce:products" %}">Productos</a></li> -->
+                <li><a class="{% if request.path|slice:'8' == '/agentes' %}active {% endif %}"
+                                href="{% url 'ecommerce:agents' %}">Agentes</a></li>
+                <li><a class="{% if request.path|slice:'5' == '/blog' %}active {% endif %}"
+                                href="{% url 'ecommerce:posts_list' %}">Blog</a></li>
+                <li><a class="{% if request.path|slice:'9' == '/contacto' %}active {% endif %}"
+                                href="{% url 'ecommerce:contact' %}">Contacto</a></li>
+        </ul>
+
+</header>
+<!-- <div class="cat_main_nav" id="cat_main_nav">
         <div class="main-nav" style="display: flex; align-items: center; justify-content: center;">
                 <div class="cat_main_nav-logo" align="left">
                         <a href="{% url 'ecommerce:home' %}">
@@ -15,10 +44,10 @@
                                         href="{% url 'ecommerce:about' %}">Nosotros</a></li>
                         <li class="main-nav__item"><a
                                         class="{% if request.path|slice:'12' == '/propiedades' %}active {% endif %}"
-                                        href="{% url 'ecommerce:properties' %}">Propiedades</a></li>
-                        <!-- <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/productos" %}active {% endif %}"
+                                        href="{% url 'ecommerce:properties' %}">Propiedades</a></li> -->
+<!-- <li class="main-nav__item"><a class="{% if request.path|slice:"10" == "/productos" %}active {% endif %}"
                                                 href="{% url "ecommerce:products" %}">Productos</a></li> -->
-                        <li class="main-nav__item"><a
+<!-- <li class="main-nav__item"><a
                                         class="{% if request.path|slice:'8' == '/agentes' %}active {% endif %}"
                                         href="{% url 'ecommerce:agents' %}">Agentes</a></li>
                         <li class="main-nav__item"><a
@@ -27,21 +56,16 @@
                         <li class="main-nav__item"><a
                                         class="{% if request.path|slice:'9' == '/contacto' %}active {% endif %}"
                                         href="{% url 'ecommerce:contact' %}">Contacto</a></li>
-                        <!-- <a href="#home" class="active">Home</a>
-                                                <a href="#news">News</a>
-                                                <a href="#contact">Contact</a>
-                                                <a href="javascript:void(0);" style="font-size:15px;" class="icon"
-                                                        onclick="navmobile()">&#9776;</a> -->
                 </ul>
         </div>
 
-</div>
+</div> -->
 
 {% block scripts %}
 <script>
         window.onscroll = function () { myFunction() };
 
-        var header = document.getElementById("cat_main_nav");
+        var header = document.getElementById("header_c");
         var sticky = header.offsetTop;
 
         function myFunction() {
@@ -52,6 +76,7 @@
                 }
         }
 </script>
+<!--
 <script>
         function navmobile() {
                 var x = document.getElementById("cat_main_nav");
@@ -61,7 +86,7 @@
                         x.className = "cat_main_nav";
                 }
         }
-</script>
+</script> -->
 {% endblock scripts %}
 
 <!-- <nav class="main-nav">
