--- a/src/static/templates/ecommerce/includes/nav.html
+++ b/src/static/templates/ecommerce/includes/nav.html
@@ -6,7 +6,7 @@
 
 <header class="header" id="header_c">
         <div class="col logodiv" style="width:40%;">
-                <a href="/" class="logo"><img src="{% static 'img/logo-blanco.png' %}" class="" alt="CaterraLogo"></a>
+                <a href="/"><img src="{% static 'img/logo-blanco.png' %}" class="" alt="CaterraLogo"></a>
         </div>
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -15,8 +15,7 @@
                                 href="{% url 'ecommerce:home' %}">Inicio</a></li>
                 <li><a class="{% if request.path|slice:'10' == '/acerca-de' %}active {% endif %}"
                                 href="{% url 'ecommerce:about' %}">Nosotros</a></li>
-                <li><a
-                                class="{% if request.path|slice:'12' == '/propiedades' %}active {% endif %}"
+                <li><a class="{% if request.path|slice:'12' == '/propiedades' %}active {% endif %}"
                                 href="{% url 'ecommerce:properties' %}">Propiedades</a></li>
                 <!-- <li><a class="{% if request.path|slice:"10" == "/productos" %}active {% endif %}"
                                 href="{% url "ecommerce:products" %}">Productos</a></li> -->
@@ -61,34 +60,6 @@
 
 </div> -->
 
-{% block scripts %}
-<script>
-        window.onscroll = function () { myFunction() };
-
-        var header = document.getElementById("header_c");
-        var sticky = header.offsetTop;
-
-        function myFunction() {
-                if (window.pageYOffset > sticky) {
-                        header.classList.add("sticky_nav");
-                } else {
-                        header.classList.remove("sticky_nav");
-                }
-        }
-</script>
-<!--
-<script>
-        function navmobile() {
-                var x = document.getElementById("cat_main_nav");
-                if (x.className === "cat_main_nav") {
-                        x.className += " responsive";
-                } else {
-                        x.className = "cat_main_nav";
-                }
-        }
-</script> -->
-{% endblock scripts %}
-
 <!-- <nav class="main-nav">
         <div class="main-nav__logo">
                 <a href="{% url 'ecommerce:home' %}">
@@ -115,3 +86,24 @@
                                 href="{% url 'ecommerce:contact' %}">Contacto</a></li>
         </ul>
 </nav>  -->
+
+
+{% block scripts %}
+<script>
+        window.onscroll = function () { myFunction() };
+
+        var header = document.getElementById("header_c");
+        var sticky = header.offsetTop;
+
+        function myFunction() {
+                if (window.pageYOffset > sticky) {
+                        header.classList.add("sticky_nav");
+                        header.classList.attr
+                        $('.header .logodiv a img').attr('src','{% static 'img/logo-negro.png' %}');
+                } else {
+                        header.classList.remove("sticky_nav");
+                        $('.header .logodiv a img').attr('src','{% static 'img/logo-blanco.png' %}');
+                }
+        }
+</script>
+{% endblock scripts %}
