--- a/src/static/templates/ecommerce/layouts/ecommerce.layout.html
+++ b/src/static/templates/ecommerce/layouts/ecommerce.layout.html
@@ -27,7 +27,7 @@
 
     <!-- Styles -->
     <link href="{% static 'css/bundle.dist.css' %}" rel="stylesheet">
-
+    <link rel="stylesheet" href="{% static 'css/ecommerce/home.css' %}"> 
     <link rel="stylesheet" href="{% static 'css/ecommerce/base.css' %}">
 
     {% block estilos-adicionales %}
@@ -39,32 +39,29 @@
 
 <body>
     <!-- top header section -->
-    <div id="top_header_back">
+    <div id="top_header_back" >
         <section id="top_header">
-
-            <div class="container">
-                <div class="row topbar" style="display: flex; align-items: center;">
-                    <div class="col-md caterra_info">
+                <div class="row" style="align-items: center;">
+                    <div class="col col-md-auto caterra_info">
                         <p><i class="fas fa-phone-volume"></i> (662) 187 5495</p>
                     </div>
-                    <div class="col-md-4 caterra_info">
+                    <div class="col col-md-auto caterra_info">
                         <p><i class="fas fa-map-marker-alt"></i> Blvd. Jesus García Morales km. 6.5 #335</p>
                     </div>
-                    <div class="col-md-3 caterra_info">
+                    <div class="col col-md-auto caterra_info">
                         <p><i class="far fa-envelope"></i> administracion@caterra.mx</p>
                     </div>
-                    <div class="col-md socials">
+                    <div class="col col-md-auto socials">
                         <p>
                             <a href=""><i class="fab fa-facebook-f"></i></a>&nbsp;&nbsp;
                             <a href=""><i class="fab fa-twitter"></i></a>&nbsp;&nbsp;
                             <a href=""><i class="fab fa-instagram"></i></a>
                         </p>
                     </div>
-                    <div align="right" class="col-md btn-login">
+                    <div class="col col-md-auto btn-login">
                         <button class="btnlogin">INICIAR SESIÓN</button>
                     </div>
                 </div>
-            </div>
         </section>
     </div>
 
