--- a/src/static/templates/ecommerce/properties.html
+++ b/src/static/templates/ecommerce/properties.html
@@ -136,7 +136,7 @@
                     <div class="col-md-6 property-card">
                         <div class="row">
                             <div class="col-lg-12">
-                                <img class="img-responsive" src="{{propiedad.imagen.url}}">
+                                <img class="img-responsive" src="{{propiedad.imagen.image.url}}">
                             </div>
                             <div class="col-lg-12">
 
@@ -145,7 +145,21 @@
                                     <p style="text-align: justify;">{{propiedad.direccion}}</p>
                                     <p style="color: #486600">${{propiedad.precio}}</p>
                                     <p><i class="fas fa-bed"></i>&nbsp;3&nbsp;&nbsp;&nbsp;<i class="fas fa-bath"></i>&nbsp;{{propiedad.banos}}&nbsp;&nbsp;&nbsp;<i class="fas fa-th-large"></i> {{propiedad.terreno}} m2</p>
-                                    <div class="row">
+                                    <div class="row prop-bottom" style="padding-top:1em;">
+                                        <div class="col" style="font-size: 10px; padding-top: 2%;">
+                                            <!-- <p>Hace 3 Meses</p> -->
+                                            <!-- <p>{{propiedad.created_at|timesince}}</p> -->
+                                            <p>Hace 3 meses</p>
+                                        </div>
+                                        <div class="col" style="padding-top: 2%;">
+                                            <p style="font-size: 10px;"><i class="far fa-clone"></i> COMPARAR</p>
+                                        </div>
+                                        <div class="col">
+                                            <button onClick="location.href='{% url  'ecommerce:property_detail' propiedad.id %}'"
+                                                class="prop-button">DETALLES &#129122;</button>
+                                        </div>
+                                    </div>
+                                    <!-- <div class="row">
                                         <div class="col-md-4">
                                             <p>Hace 3 Meses</p>
                                         </div>
@@ -155,7 +169,7 @@
                                         <div class="col-md-4">
                                             <a href="{% url  'ecommerce:property_detail' propiedad.id %}" class="btn clear-button">DETALLES</a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
 
