cambios en front

--- a/src/static/css/bundle.dist_backup.css
+++ b/src/static/css/bundle.dist_backup.css
@@ -22206,7 +22206,7 @@ input:focus,
 }
 
 #top_header_back {
-  background-color: #223300;
+  background-color: white;
   /* padding:0px !important; */
   margin:0px !important;
   /* display: flex; */
