--- a/src/static/templates/ecommerce/agents.html
+++ b/src/static/templates/ecommerce/agents.html
@@ -19,8 +19,13 @@
     .texto{
         height: 80px;
     }
+
+    #header_section_back{
+        background-image: url("{% static 'img/img-24.png' %}");
+        background-position: bottom;
+    }
 </style>
-{% endblock estilos-adicionales %}
+{% endblock estilos-adicionales %}    
 
 {% block content %}
 
