--- a/src/static_root/ecommerce/css/ecommerce-layout.scss
+++ b/src/static_root/ecommerce/css/ecommerce-layout.scss
@@ -1,10 +1,10 @@
 #top_header_back {
-    background-color: $softGray;
+    background-color: #223300;
     display: flex;
     justify-content: center;
 }
 
-#top_header {
+#top_header { 
     align-items: center;
     box-sizing: border-box;
     color: white;
@@ -14,6 +14,7 @@
     padding: 10px;
     max-width: 1440px;
     width: 100%;
+    font-weight: 100;
 }
 
 .user-actions__link {
@@ -40,8 +41,9 @@
 
 // Header
 #header_section_back {
-    background-image: url("../img/slider1.jpeg");
-    height: 300px;
+    background-image: url("../ecommerce/img/banner-titulo.png");
+    background-size: cover;
+    height: 450px;
     background-color: $softGray;
     display: flex;
     justify-content: center;
@@ -64,7 +66,7 @@ div#footer_back {
 }
 
 .footer-image {
-    width: 400px;
+    width: 180px;
 }
 
 .footer-link-list {
@@ -76,16 +78,16 @@ div#footer_back {
 
 .footer-link-list__title {
     font-weight: bolder;
-    text-align: center;
+    // text-align: center;
     text-transform: uppercase;
-    text-decoration: underline;
+    // text-decoration: underline;
 }
 
 .footer-link-list__item {
     >a {
         display: block;
         font-weight: lighter;
-        text-align: center;
+        // text-align: center;
     }
 }
 
