--- a/src/static_root/templates/ecommerce/home.html
+++ b/src/static_root/templates/ecommerce/home.html
@@ -18,31 +18,58 @@
     .texto {
         height: 80px;
     }
+
+    .texto-logo-caterra{
+        padding: 5%;
+        background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 77%, rgba(255,255,255,1) 100%);
+        color: white;
+        text-shadow: rgb(0, 0, 0) 1px 0px 0px, rgb(0, 0, 0) 0.540302px 0.841471px 0px, rgb(0, 0, 0) -0.416147px 0.909297px 0px, rgb(0, 0, 0) -0.989992px 0.14112px 0px, rgb(0, 0, 0) -0.653644px -0.756802px 0px, rgb(0, 0, 0) 0.283662px -0.958924px 0px, rgb(0, 0, 0) 0.96017px -0.279415px 0px;
+    }
+
+    .btn-negro{
+        text-align:left;
+        background-color: inherit;
+        border-radius: 0px;
+        padding-left: 5%;
+        padding-right: 5%;
+        border-color: #ffffff;
+    }
+
+    .btn-negro:hover{
+        background-color: #ffffff;
+        color: #000000;
+    }
+
+    .complete-header{
+    }
+
 </style>
 {% endblock estilos-adicionales %}
 
 {% block content %}
 
 <body class="home">
-    {% include './includes/nav.html' %}
-    <!-- slider section -->
-    <div id="slider_back">
-        <section class="slider">
-            <ul class="sliders">
-
-                {% for slider in sliders %}
-                <li class="glide__slide main-slider__item">
-                    <img src="{{ slider.image.url }}" alt="">
-                    <div class="main-slider__content">
-                        <h2 class="main-slider__content__title">{{ slider.title}}</h2>
-                        <a href="{{ slider.url }}" class="main-slider__content__action btn btn-success text-xs">Ver
-                            más</a>
-                    </div>
-                </li>
-                {% endfor %}
-
-            </ul>
-        </section>
+    <div class="complete-header">
+        {% include './includes/nav.html' %}
+        <!-- slider section -->
+        <div id="slider_back">
+            <section class="slider">
+                <ul class="sliders">
+    
+                    {% for slider in sliders %}
+                    <li class="glide__slide main-slider__item">
+                        <img src="{{ slider.image.url }}" alt="">
+                        <div class="main-slider__content">
+                            <h2 class="main-slider__content__title">{{ slider.title}}</h2>
+                            <a href="{{ slider.url }}" class="main-slider__content__action btn btn-success text-xs">Ver
+                                más</a>
+                        </div>
+                    </li>
+                    {% endfor %}
+    
+                </ul>
+            </section>
+        </div>
     </div>
     <!-- end of slider section -->
     <!-- search section -->
@@ -257,12 +284,7 @@
                             <button type="reset" class="btn btn-block clear-button">LIMPIAR</button>
                         </div>
                         <div class="col-md-6 prop_form">
-                            <button type="submit" class="btn btn-block" style="
-                                background-color: #486600;
-                                border-radius: 36px;
-                                padding-left: 2%;
-                                padding-right: 2%;
-                                ">BUSCAR</button>
+                            <button type="submit" class="btn btn-block btn-verde" >BUSCAR</button>
                         </div>
                     </div>
                 </div>
@@ -272,43 +294,39 @@
     <!-- end formulario index -->
 
     <!-- logo-texto -->
-    <div class="row">
-        <div align="center" style="
-        margin-left: 5%;
-        margin-right: 5%;
-        ">
-            <div class="col-md-4" style="float:left;">
-                <img src="{% static 'img/logo-negro.png' %}" width="80%" style="margin-bottom: 1.5em;">
-            </div>
-            <div class="col-md-8" style="padding-left: 5%; float:left;">
-                <p style="text-align: justify;">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet risus nec elit lacinia
-                    accumsan
-                    ultricies id dolor.
-                    Nam pulvinar ante massa, a efficitur risus elementum at. Proin egestas facilisis efficitur.
-                    Suspendisse
-                    nisl nibh, convallis id facilisis vel, placerat ac urna.
-                    Nulla eu leo lectus. Praesent consequat augue purus, ac congue justo fringilla ut. Sed sed velit
-                    diam.
-                    Donec nisi metus, placerat nec dolor accumsan, rutrum fermentum lacus.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.Proin egestas facilisis efficitur.
-                    Suspendisse
-                    nisl nibh, convallis id facilisis vel, placerat ac urna.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.Proin egestas facilisis efficitur.
-                    Suspendisse
-                    nisl nibh, convallis id facilisis vel, placerat ac urna.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.Proin egestas facilisis efficitur.
-                    Suspendisse
-                    nisl nibh, convallis id facilisis vel, placerat ac urna.
-                </p>
-                <div align="left" style="margin-top: 1%; margin-top: 6%;">
-                    <button type="submit" class="btn" style="
-                        text-align:left;
-                        background-color: #486600;
-                        border-radius: 0px;
-                        padding-left: 5%;
-                        padding-right: 5%;
-                        ">CONOCE MÁS</button>
+    <div class="texto-logo-caterra">
+        <div class="row">
+            <div align="center" style="
+            margin-left: 5%;
+            margin-right: 5%;
+            ">
+                <div class="col-md-4" style="float:left;">
+                    <img src="{% static 'img/logo-negro-plateado.png' %}" width="80%" style="margin-bottom: 1.5em;">
+                </div>
+                <div class="col-md-8" style="padding-left: 5%; float:left;">
+                    <p style="text-align: justify;">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet risus nec elit lacinia
+                        accumsan
+                        ultricies id dolor.
+                        Nam pulvinar ante massa, a efficitur risus elementum at. Proin egestas facilisis efficitur.
+                        Suspendisse
+                        nisl nibh, convallis id facilisis vel, placerat ac urna.
+                        Nulla eu leo lectus. Praesent consequat augue purus, ac congue justo fringilla ut. Sed sed velit
+                        diam.
+                        Donec nisi metus, placerat nec dolor accumsan, rutrum fermentum lacus.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.Proin egestas facilisis efficitur.
+                        Suspendisse
+                        nisl nibh, convallis id facilisis vel, placerat ac urna.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.Proin egestas facilisis efficitur.
+                        Suspendisse
+                        nisl nibh, convallis id facilisis vel, placerat ac urna.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.Proin egestas facilisis efficitur.
+                        Suspendisse
+                        nisl nibh, convallis id facilisis vel, placerat ac urna.
+                    </p>
+                    <div align="left" style="margin-top: 1%; margin-top: 6%;">
+                        <button type="submit" class="btn btn-negro">CONOCE MÁS</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -317,89 +335,99 @@
 
 
     <!-- Propiedades -->
-    <div class="row">
-        <div align="center" style="
-        margin-left: 5%;
-        margin-right: 5%;
-        margin: 6% 6%;
-        ">
-            <h1 class="h1_title">PROPIEDADES</h1>
-            {% for propiedad in propiedades %}
-            <div class="col-md-4 col-prop" style="padding:0px !important; float: left;">
-                <div class="col-md-12" style="padding-right:1%; padding-left:1%;">
-                    <img class="img-responsive" src="{{propiedad.imagen.image.url}}">
-                    <div class="col-md-12 prop-style"
-                        style="background-color: #f1f1f1; padding: 1em 1em; text-align: justify;">
-                        <h1 style=" font-size: 20pt;">{{propiedad.nombre}}</h1>
-                        <p>{{propiedad.direccion}}</p>
-                        <p style="color: #486600;">${{propiedad.precio}}</p>
-                        <p><i class="fas fa-bed"></i>&nbsp;3&nbsp;&nbsp;&nbsp;<i
-                                class="fas fa-bath"></i>&nbsp;{{propiedad.banos}}&nbsp;&nbsp;&nbsp;<i
-                                class="fas fa-th-large"></i> {{propiedad.construccion}} m2
-                        </p>
-                        <div class="row prop-bottom" style="padding-top:1em;">
-                            <div class="col" style="font-size: 10px; padding-top: 2%;">
-                                <!-- <p>Hace 3 Meses</p> -->
-                                <!-- <p>{{propiedad.created_at|timesince}}</p> -->
-                                <p>Hace 3 meses</p>
-                            </div>
-                            <div class="col" style="padding-top: 2%;">
-                                <p style="font-size: 10px;"><i class="far fa-clone"></i> COMPARAR</p>
-                            </div>
-                            <div class="col">
-                                <button onClick="location.href='{% url  'ecommerce:property_detail' propiedad.id %}'"
-                                    class="prop-button">DETALLES &#129122;</button>
-                            </div>
+    <div class="container agentes" style="margin-top: 5%; margin-bottom: 5%;">
+        <h1 class="h1_title">PROPIEDADES</h1>
+        <div class="row">
+            
+            
+            <!-- {% for image in images %}
+                {{image}}
+                
+            {% endfor %} -->
+    
+    
+            {% for propiedad in propiedades|slice:':6' %}
+            <div class="col-md-4 property-card">
+                <img class="img-responsive" src="{{propiedad.imagen.image.url}}">
+                <div style="background-color: #f1f1f1; padding: 3%;">
+                    <h1 style="font-size: 20pt;">{{propiedad.nombre}}</h1>
+                    <p style="text-align: justify;">{{propiedad.direccion}}</p>
+                    <p style="color: #486600">${{propiedad.precio}}</p>
+                    <p><i class="fas fa-bed"></i>&nbsp;3&nbsp;&nbsp;&nbsp;<i class="fas fa-bath"></i>&nbsp;{{propiedad.banos}}&nbsp;&nbsp;&nbsp;<i class="fas fa-th-large"></i> {{propiedad.construccion}} m2</p>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <p>Hace 3 Meses</p>
+                        </div>
+                        <div class="col-md-4">
+                            <p><i class="far fa-clone"></i> Comparar</p>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="{% url  'ecommerce:property_detail' propiedad.id %}" class="btn clear-button">DETALLES</a>
                         </div>
                     </div>
                 </div>
             </div>
             {% endfor %}
         </div>
+
+        <div align="center" style="margin-top: 1%;">
+            <form action="{% url 'ecommerce:properties' %}">
+                <button class="btn btn-verde">
+                    <p style="font-size: 24px;">
+                        VER MAS
+                    </p>
+                </button>
+            </form>
+        </div>
     </div>
-    <!-- <div class="container prop-cont" style="padding: 0% 3% 0% 3%;">
-        
-    </div> -->
+
+
+
+
     <!-- end Propiedades -->
 
     <!-- Agentes -->
-    <!-- padding: 1% 3% 1% 3%; margin:0px; -->
-    <div class="row" style="background: url('static/ecommerce/img/patron-agentes.png'); background-size: cover;">
-        <div align="center" style="
-        margin-left: 5%;
-        margin-right: 5%;
-        margin-bottom: 6%;
-        ">
-            <h1 class="h1_title">CONOCE A NUESTROS AGENTES</h1>
-            {% for agente in agentes %}
-            <div class="col-md-4 col-agnt" style="padding:0px !important; float: left;">
-                <div class="col-md-12">
-                    <img src="{{agente.foto.url}}">
-                    <div class="col-md-12" style="background-color: white; text-align: justify;">
-                        <br>
-                        <h1 class="agente-nombre">{{agente.user|title}}</h1>
-                        <br>
-                        <p>{{agente.texto|truncatechars:210}}</p>
-                        <br>
-                        <p><span style="color: #486600"><i class="far fa-envelope"></i></span>
-                            {{agente.user.email}}</p>
-                        <div class="col-md-5 agnt-col" style="margin-left: auto; margin-right: 0; padding: 5%;">
-                            <button onClick="location.href='{% url 'ecommerce:agent_profile' agente.id %}'"
-                                class="prop-button agnt-button">VER PERFIL</button>
+    <div class="agentes" style="background: url('static/ecommerce/img/patron-agentes.png'); background-size: cover;">
+        <h1 class="h1_title">CONOCE A NUESTROS AGENTES</h1>
+        <div class="container">
+        </div>
+        <div class="container" style="margin-top: 5%; margin-bottom: 5%;">
+            <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
+
+                {% for agente in agentes|slice:':3' %}
+                <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-lg-12 d-flex justify-content-center">
+                            <div class="img-container d-flex justify-content-center">
+                                <img src="{{agente.foto.url}}">
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <br>
+                            <h1 style="font-size: 20pt;">{{agente.user|title}}</h1>
+                            <br>
+                            <div class="texto">
+                                <p style="text-align: justify;">{{agente.texto|truncatechars:210}}</p>
+                            </div>
+                            <br>
+                            <p><span style="color: #486600"><i class="far fa-envelope"></i></span>    {{agente.user.email}}</p>
+                            <div align="right" style="margin: 3% 0;">
+                                <a href="{% url 'ecommerce:agent_profile' agente.id %}" class="btn clear-button"> VER PERIL</a>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </div>               
+                {% endfor %}
+                    
             </div>
-            {% endfor %}
-
             <div align="center" style="margin-top: 1%;">
-                <button onClick="location.href='{% url 'ecommerce:agents' %}'" class="btn-agente">
-                    CONOCE A NUESTROS AGENTES <br><strong><span class="bigspan">¡AQUÍ!</span></strong>
-                </button>
-                <!-- <a href="{% url 'ecommerce:agents' %}" class="big-button">
-                    <span style="font-size: 18px;">A NUESTROS AGENTES</span>
-                    <br>
-                    <span><strong>¡AQUÍ!</strong></span></a> -->
+                <form action="{% url 'ecommerce:agents' %}">
+                    <button class="btn btn-verde">
+                        <p style="font-size: 24px;">
+                            CONOCE A NUESTROS AGENTES <strong>AQUí</strong>
+                        </p>
+                    </button>
+                </form>
             </div>
         </div>
     </div>
