--- a/src/static_root/templates/ecommerce/includes/nav.html
+++ b/src/static_root/templates/ecommerce/includes/nav.html
@@ -2,7 +2,72 @@
 
 {% block estilos-adicionales %}
 <link href="{% static 'css/nav.css' %}" rel="stylesheet">
+
+<style>
+        #CaterraLogo{
+                max-width: 211px;
+                padding: 5%;
+        }
+
+        .menu{
+                width: 70%;
+                min-width: 963px;
+        }
+
+        .top-header-back{
+                background-color: transparent !important;
+        }
+
+        .top-header{
+                color: #000000 !important;
+        }
+
+        .btn-transparent{
+                border-color: #000000;
+                border-radius: 0px;
+                padding: 5px;
+                color: #000000;
+        }
+
+        .btn-transparent:hover{
+                background-color: #000000;
+                color: #ffffff;
+        }
+</style>
+
 {% endblock estilos-adicionales %}
+
+<!-- top header section -->
+<div id="top_header_back" class="top-header-back">
+<section id="top_header" class="top-header">
+        <div class="row">
+                <div class="col col-md-auto caterra_info">
+                        <p><i class="fas fa-phone-volume"></i> (662) 187 5495</p>
+                </div>
+                <div class="col col-md-auto caterra_info">
+                        <p><i class="fas fa-map-marker-alt"></i> Blvd. Jesus García Morales km. 6.5 #335</p>
+                </div>
+                <div class="col col-md-auto caterra_info">
+                        <p><i class="far fa-envelope"></i> administracion@caterra.mx</p>
+                </div>
+                <div class="col col-md-auto socials">
+                        <p>
+                                <a href='https://www.facebook.com/CATERRA.mx/' target='_blank'><i class="fab fa-facebook-f"></i></a>&nbsp;&nbsp;
+                                <a href=""><i class="fab fa-twitter"></i></a>&nbsp;&nbsp;
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                        </p>
+                </div>
+                
+                <div class="col col-md-auto caterra_info">
+                        <form action="{% url 'users:login_view' %}" method="post">
+                                {% csrf_token %}
+                                <button class="btn btn-transparent">INICIAR SESIÓN</button>
+                        </form>
+                </div>
+        </div>
+</section>
+</div>
+<!-- end of top header section -->
 
 <header class="header" id="header_c">
         <div class="col logodiv" style="width:40%;">
@@ -10,7 +75,7 @@
         </div>
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-        <ul class="menu" style="width:60%;">
+        <ul class="menu" >
                 <li><a class="{% if request.path == '/' %}active{% endif %}"
                                 href="{% url 'ecommerce:home' %}">Inicio</a></li>
                 <li><a class="{% if request.path|slice:'10' == '/acerca-de' %}active {% endif %}"
@@ -19,6 +84,8 @@
                                 href="{% url 'ecommerce:properties' %}">Propiedades</a></li>
                 <li><a class="{% if request.path|slice:'8' == '/agentes' %}active {% endif %}"
                                 href="{% url 'ecommerce:agents' %}">Agentes</a></li>
+                <li><a class="{% if request.path|slice:'12' == '/desarrollos' %}active {% endif %}"
+                                href="{% url 'ecommerce:desarrollos' %}">Desarrollos</a></li>
                 <li><a class="{% if request.path|slice:'5' == '/blog' %}active {% endif %}"
                                 href="{% url 'ecommerce:posts_list' %}">Blog</a></li>
                 <li><a class="{% if request.path|slice:'9' == '/contacto' %}active {% endif %}"
